Dave's layout changes in response to Digsy's feedback
Market window
 * Moved price display labels
 * Renamed labels
 * Changed graph so X axis does not dynamically adjust

Also
 * experiment time changed to 20 minutes

--- a/MarketSimulation/instructionscreen1.ui
+++ b/MarketSimulation/instructionscreen1.ui
@@ -44,6 +44,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Thank you for agreeing to take part in this study.
 
