--- a/MarketSimulation/instructionscreen6.ui
+++ b/MarketSimulation/instructionscreen6.ui
@@ -44,6 +44,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Again, by using the decryption key we can see that the second letter in
 the encrypted word, M, corresponds to the letter A in the decrypted word.</string>
