--- a/MarketSimulation/finalscreen.ui
+++ b/MarketSimulation/finalscreen.ui
@@ -44,6 +44,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>GG.  I owe you eleventy billion dollars.</string>
        </property>
