--- a/MarketSimulation/instructionscreen3.ui
+++ b/MarketSimulation/instructionscreen3.ui
@@ -44,6 +44,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>You may change your allocation at any time during the experiment. To
 do this simply move the slider to the new allocation and click the submit
