--- a/MarketSimulation/instructionscreentest3.ui
+++ b/MarketSimulation/instructionscreentest3.ui
@@ -44,6 +44,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>To check your understanding please complete the above decryption and
 then press the submit button.</string>
