--- a/MarketSimulation/quest1.ui
+++ b/MarketSimulation/quest1.ui
@@ -44,6 +44,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Thanks for playing.  What's you, Major?</string>
        </property>
