--- a/MarketSimulation/titlescreen.ui
+++ b/MarketSimulation/titlescreen.ui
@@ -44,6 +44,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Please do not click the Next button until told to do
 so by the experimenter.</string>
