Changed "done" button of decryption screen to "Submit"

--- a/MarketSimulation/decryptionwindow.ui
+++ b/MarketSimulation/decryptionwindow.ui
@@ -136,7 +136,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Done</string>
+            <string>Submit</string>
            </property>
           </widget>
          </item>
