--- a/MarketSimulation/resources.qrc
+++ b/MarketSimulation/resources.qrc
@@ -3,4 +3,9 @@
         <file alias="dictionary">data/core-wordnet.txt</file>
         <file alias="market-data">data/data.dat</file>
     </qresource>
+    <qresource prefix="/ui">
+        <file alias="decrypt_1">data/decrypt_1.png</file>
+        <file alias="decrypt_2">data/decrypt_2.png</file>
+        <file alias="decrypt_3">data/decrypt_3.png</file>
+    </qresource>
 </RCC>
