--- a/MarketSimulation/instructionscreen2.ui
+++ b/MarketSimulation/instructionscreen2.ui
@@ -50,14 +50,10 @@
         </font>
        </property>
        <property name="text">
-        <string>Make your initial allocation by setting the slider to the percentage of the
-$10 endowment that you wish to allocate to each asset.
-
-Moving the slider to the left will allocate more to Asset 1 and less to Asset
-2. Moving it to the right will allocate more to Asset 2 and less to Asset 1.
-
-Once you have entered an allocation press the begin button.
-Once all participants are ready to begin the experiment will start.</string>
+        <string>You may make your initial allocation by setting the slider to the percentage of the $10 endowment that you wish to allocate to each asset.
+Moving the slider to the left will allocate more to Asset 1 and less to Asset 2. Moving it to the right will allocate more to Asset 2 and less to Asset 1.
+Once you have decided on an allocation click the submit button. You MUST click the submit button in order to change you allocation.
+</string>
        </property>
       </widget>
      </item>
