--- a/MarketSimulation/instructionscreentest3.ui
+++ b/MarketSimulation/instructionscreentest3.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>607</width>
-    <height>391</height>
+    <width>652</width>
+    <height>417</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,19 +30,6 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
       <widget class="QWidget" name="decryptionWidget" native="true">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -52,7 +39,7 @@
        </property>
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>500</width>
          <height>50</height>
         </size>
        </property>
@@ -61,33 +48,24 @@
      </item>
      <item>
       <widget class="QLabel" name="label">
+       <property name="minimumSize">
+        <size>
+         <width>300</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="font">
         <font>
          <pointsize>12</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Well done!
-The experiment will run for 20 minutes. During this time you may change between the decryption task and the simulation task as many times as you wish. To do this use the Next and Previous buttons once the experiment has started. 
-At the end of the experiment you will be paid your total wealth from the stock market simulation as well as 15 cents for each decryption you complete.
-If you have any questions about the instructions please raise your hand now.
-To finish the instructions and begin the experiment click the Next button.
-</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;To check your understanding please complete the above decryption and then press the Submit button.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </item>
